--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ html {
 }
 
 body {
+	font-family: 'Roboto', sans-serif;
 }
 
 div {
@@ -75,7 +76,6 @@ div {
 }
 
 header {
-	font-family: 'Roboto', sans-serif;
 	font-size: 1.6rem;
 	color: #838994;
 	letter-spacing: .048rem;
@@ -129,4 +129,56 @@ header {
 .top-navigation > .content > .links a:hover {
 	color: black;
 	cursor: pointer;
+}
+
+.intro {
+	/* width: 100%; */
+	height: 66rem;
+	background-image: url(../images/first-background.jpg);
+	background-size: cover;
+	background-position: center bottom;
+    background-repeat: no-repeat;
+}
+
+h1 {
+	font-size: 5rem;
+}
+
+h2 {
+	font-size: 3.5rem;
+}
+
+h3 {
+	font-size: 2.5rem;
+}
+
+.intro h1, .intro h3, .buttons {
+	color: #FFF;
+	text-align: center;
+}
+
+.intro h1 {
+	margin-top: 18rem;
+}
+
+.intro h3, .intro .buttons {
+	margin-top: 2rem;
+}
+
+button {
+    width: 15.5rem;
+    background-color: #f15a29;
+    border-color: #f15a29;
+    text-shadow: none;
+    border-style: none;
+    border-radius: 4px;
+    padding: 1.6rem 2.4rem;
+    color: white;
+    font-size: 1.8rem;
+}
+
+button:hover {
+    background-color: #d9400e;
+    border-color: #cf3d0e;
+    cursor: pointer;
 }
