--- a/css/style.css
+++ b/css/style.css
@@ -75,16 +75,16 @@ div {
     border: 1px solid Chocolate;
 }
 
-header {
+.top-navigation {
 	font-size: 1.6rem;
 	color: #838994;
 	letter-spacing: .048rem;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-}
-
-.top-navigation {
 	background-color: #fff;
+	position: fixed;
+	width: 100%;   /* must specify explicitly when using fixed position */
+	z-index: 9999;
 }
 
 .top-navigation > .content {
@@ -194,6 +194,33 @@ h3 {
 	margin-bottom: 1rem;
 }
 
+
+.cases .devices {
+    width: 33.1%;   /* 33.33333% doesn't really work due to the gap/space between inline elements; see Flexbox stuff below */
+    display: inline-block;
+    text-align: center;
+
+    /* styles to assist with debugging */
+    box-sizing: border-box;
+
+    /* Flexbox doesn't really work in conjunction with inline-block, so I'm skipping it and using 33.1%.  Actually, I prefer
+       my own li approach instead of these 33% divs, but it could depend on the background. */
+
+    /* start Flexbox stuff (to avoid gap/space between inline elements): */
+    
+    /* display: -webkit-box;  */     /* OLD - iOS 6-, Safari 3.1-6 */
+  	/* display: -moz-box;     */     /* OLD - Firefox 19- (buggy but mostly works) */
+  	/* display: -ms-flexbox;  */     /* TWEENER - IE 10 */
+  	/* display: -webkit-flex; */     /* NEW - Chrome */
+  	/* display: flex;         */    /* NEW, Spec - Opera 12.1, Firefox 20+ */
+
+  	/* end Flexbox stuff */
+
+
+}
+
+
+/*
 .svg-icons {
 	list-style-type: none;
 }
@@ -203,6 +230,15 @@ h3 {
 	padding-left: 3rem;
 	padding-right: 3rem;
 }
+
+.svg-icon {
+	height: 127px;
+	display: inline-block;
+	margin-top: 3.5rem;
+	margin-bottom: 3.5rem;
+}
+
+*/
 
 .svg-icon {
 	height: 127px;
