--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 div {
-    border: 1px solid Chocolate;
+    /* border: 1px solid Chocolate; */   /* This was for "debugging" */
 }
 
 .top-navigation {
@@ -245,4 +245,57 @@ h3 {
 	display: inline-block;
 	margin-top: 3.5rem;
 	margin-bottom: 3.5rem;
+}
+
+
+/* Footer area */
+
+.social .content {
+	text-align: center;
+}
+
+.social hr {
+	border: 0;
+	border-top: 1px solid #eaebec;
+	margin: 2.1rem 0;
+}
+
+.social h5 {
+	font-size: 1.5rem;
+	margin-top: 1.5rem;
+}
+
+.social-icons {
+	list-style-type: none;
+	margin: 1.5rem 0;
+}
+
+.social-icons li {
+	border-radius: 2rem;
+	font-size: 1.6rem;
+	width: 4rem;
+	height: 4rem;
+	display: inline-block;
+	margin: 1.2rem .6rem;   /* [top/bottom]  [right/left] */
+	border: 1px solid #eaebec;
+	padding: 1.2rem 0;
+}
+
+.social .twitter {
+	color: #55acee;
+}
+
+.social .facebook {
+	color: #4c66a4;
+}
+
+
+.social .instagram {
+	color: #3f729b;
+}
+
+.copyright {
+	font-size: 1.44rem;
+	font-weight: 300;
+	color: #838994;
 }
